--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "FOC - Fisher Online Companion",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore ."
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,22 @@
   "bugs": {
     "url": "https://github.com/Dixeet/fisher-online-companion/issues"
   },
-  "homepage": "https://github.com/Dixeet/fisher-online-companion#readme"
+  "homepage": "https://github.com/Dixeet/fisher-online-companion#readme",
+  "devDependencies": {
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "^3.0.3"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "browser": true,
+      "es2021": true,
+      "node": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "prettier"
+    ]
+  }
 }
