--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "command-line-args": "^5.2.1",
+    "command-line-usage": "^7.0.1",
     "n-readlines": "^1.0.1",
     "nodemon": "^3.0.1",
     "xml2js": "^0.6.2"
