--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "parsers/parse.js",
   "type": "module",
   "scripts": {
-    "cleanup": "find parsers/.tmp/ ! -name '.gitkeep' -type f -exec rm -rf {} +",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore\"",
     "prettier": "prettier . --write --ignore-path ./package-lock.json"
   },
@@ -32,6 +34,7 @@
     },
     "extends": [
       "eslint:recommended",
+      "plugin:vue/vue3-recommended",
       "prettier"
     ]
   },
@@ -41,15 +44,20 @@
     "singleQuote": true
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "vite": "^4.4.8"
   },
   "dependencies": {
     "command-line-args": "^5.2.1",
     "command-line-usage": "^7.0.1",
+    "eslint-plugin-vue": "^9.17.0",
     "n-readlines": "^1.0.1",
     "nodemon": "^3.0.1",
+    "sass": "^1.68.0",
+    "vue": "^3.3.4",
     "xml2js": "^0.6.2"
   }
 }
