--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "clean:vite": "rm -rf .cache/* components.d.ts",
-    "clean:parse": "rm -rf parsers/.tmp/*",
+    "clean:parse": "rm -rf public/data/*",
+    "clean:images": "rm -rf src/assets/images/maps/* src/assets/images/fishes/* src/assets/images/weapons/*",
     "parse": "node parsers/parse.js",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore\"",
     "prettier": "prettier . --write --ignore-path ./package-lock.json"
