--- a/package.json
+++ b/package.json
@@ -60,8 +60,10 @@
     "vite": "^4.4.8"
   },
   "dependencies": {
+    "@vueuse/core": "^10.4.1",
     "command-line-args": "^5.2.1",
     "command-line-usage": "^7.0.1",
+    "dexie": "^3.2.4",
     "eslint-plugin-vue": "^9.17.0",
     "n-readlines": "^1.0.1",
     "nodemon": "^3.0.1",
