--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@iconify-json/game-icons": "^1.1.3",
     "@iconify-json/mdi": "^1.1.54",
+    "@iconify-json/pajamas": "^1.1.32",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/compiler-sfc": "^3.3.4",
     "eslint": "^8.50.0",
