--- a/package.json
+++ b/package.json
@@ -43,7 +43,15 @@
     ],
     "rules": {
       "no-console": "error"
-    }
+    },
+    "overrides": [
+      {
+        "files": ["src/pages/**/*.vue"],
+        "rules": {
+          "vue/multi-word-component-names": "off"
+        }
+      }
+    ]
   },
   "prettier": {
     "semi": true,
